--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gestor de Tareas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gestor de Tareas - CRUD Completo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="bg-light">
   <div class="container py-5">
     <h1 class="mb-4 text-center">📋 Lista de Tareas</h1>
 
-    <!-- Formulario -->
+    <!-- Formulario para crear tarea -->
     <form id="tarea-form" class="row g-3 mb-4">
       <div class="col-md-5">
-        <input type="text" class="form-control" id="titulo" placeholder="Título de la tarea" required>
+        <input type="text" class="form-control" id="titulo" placeholder="Título de la tarea" required />
       </div>
       <div class="col-md-5">
-        <input type="text" class="form-control" id="descripcion" placeholder="Descripción">
+        <input type="text" class="form-control" id="descripcion" placeholder="Descripción" />
       </div>
       <div class="col-md-2 d-grid">
         <button type="submit" class="btn btn-primary">Agregar</button>
@@ -31,3 +31,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
